release/1.4.7/VERSION.md
# 1.4.7

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.4.7```   |
| Release Time   | ```2012-12-27T22:00:00+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```pre-1.6```   |
| sha1   | ```3d8e55480977e32acd9844e545177e69a52f594b```   |
| size   | ```74091```   |
| total size  | ```49505710```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/3d8e55480977e32acd9844e545177e69a52f594b/pre-1.6.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```53ed4b9d5c358ecfff2d8b846b4427b888287028```   |
| size   | ```5005735```   |
| url       | ```https://launcher.mojang.com/v1/objects/53ed4b9d5c358ecfff2d8b846b4427b888287028/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```2f0ec8efddd2f2c674c77be9ddb370b727dec676```   |
| size   | ```2061638```   |
| url       | ```https://launcher.mojang.com/v1/objects/2f0ec8efddd2f2c674c77be9ddb370b727dec676/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |